resolve fdo#54335 type an existing style name into Style box changes hierarchy

Change-Id: If2fd4eecec4f6f031b264a9a1b0c31e938194878